test/fail/poly_rec04.v3
//@execute =0
class poly_rec03a<T> {
	var f: poly_rec03a<poly_rec03a<T>>;
	new(arg: int) {
		if (arg > 0) f = poly_rec03a<poly_rec03a<T>>.new(arg);
		var i = f;
	}
}
def main() -> int {
	var o = poly_rec03a<int>.new(-1).f;
	return 0;
}
